fix footer on mobile add link to address add link to telephone display email across javascript fix display list of candidates in desktop view

--- a/elections/static/css/main.css
+++ b/elections/static/css/main.css
@@ -686,7 +686,7 @@ div.question-answer div.row.hidden-xs:nth-of-type(2), div.question-answer div.ro
 	padding-top: 40px;
 	color: #B4BAC5;
 	background-color: #323a45;
-	height: 140px;
+	/*height: 140px;*/
 }
 
 #footer a {
